# DGenerator

./: .gitignore  CMakeLists.txt  DGenerator.cpp  DGenerator.hpp  Makefile  main.cpp
include/: DGen.hpp
src/: DGen.cpp  main.cpp
